#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([trace-wrappers], [0.1], [Stanislav Brabec <sbrabec@suse.cz>])
AC_CONFIG_SRCDIR([wrap.h])
AM_DISABLE_STATIC
AM_INIT_AUTOMAKE([-Wall dist-bzip2])
dnl We build a library, we need libtool.
LT_INIT
AM_MAINTAINER_MODE

# Checks for programs.
dnl We need C compiler.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([ Makefile
		])
AC_OUTPUT
